# dino

./: CMakeLists.txt
headers/: dino.h  game.h  obstacle.h  utils.h
src/: dino.c  game.c  main.c  obstacle.c  utils.c
